--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -30,34 +30,7 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
-
-      - name: Obtain a GitHub App Installation Access Token
-        id: githubAppAuth
-        run: |
-          TOKEN="$(npx obtain-github-app-installation-access-token ci ${{ secrets.GH_APP_CREDENTIALS_TOKEN }})"
-          echo "::add-mask::$TOKEN"
-          echo "::set-output name=token::$TOKEN"
-      - name: Use the obtained token
-        run: |
-          curl -X POST -H 'Content-Type: application/json' \
-            -d '{"context":"test","state":"success"}' \
-            "https://api.github.com/repos/$GITHUB_REPOSITORY/statuses/$GITHUB_SHA?access_token=$GITHUB_TOKEN"
-        env:
-          GITHUB_TOKEN: ${{ steps.githubAppAuth.outputs.token }}
-
       - run: |
-          sudo apt-get -qq install expect
-          /usr/bin/expect <<EOD
-          spawn npm adduser
-          expect {
-            "Username:" {send "$USERNAME\r"; exp_continue}
-            "Password:" {send "$PASSWORD\r"; exp_continue}
-            "Email: (this IS public)" {send "$EMAIL\r"; exp_continue}
-          }
-          EOD
           npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ steps.githubAppAuth.outputs.token }}
-          USERNAME: ${{ github.event.pusher.name }}
-          EMAIL: ${{ github.event.pusher.email }}
-          PASSWORD: ${{ steps.githubAppAuth.outputs.token }}
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
