--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-itrc-client",
-  "version": "1.0.34",
+  "version": "1.0.35",
   "description": "A CLI to manage a TODO list",
   "main": "index.js",
   "scripts": {
@@ -16,6 +16,7 @@
     "chalk": "^4.1.0",
     "commander": "^7.2.0",
     "conf": "^9.0.2",
+    "fs": "^0.0.1-security",
     "jest": "^29.4.3",
     "requests": "^0.3.0"
   },
