--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-      - run: npm install; npm ci;
+      - run: npm install --unhandled-rejections=strict; npm ci;
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
