--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,7 +5,7 @@ name: itrc-npm-client
 
 on:
   workflow_run:
-    workflows: ["Tag Release"]
+    workflows: ["Push Change"]
     types:
       - completed
     
